@startuml Domain

package "Refrigerator System" {
  class CoolManager
  class Refrigerator
  class Resistance
  class Compressor
  class Light
  class Fan
  class Door

  CoolManager -- Refrigerator : manages
  Refrigerator -- Resistance : contains
  Refrigerator -- Compressor : contains
  Refrigerator -- Door : contains
  Refrigerator -- Fan : contains
  Refrigerator -- Light : contains
}

@enduml